# api/openapi.yaml
@@ -66,32 +66,6 @@ paths:
           description: Bad request
         '500':
           description: Internal server error
-    put:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - id
-              properties:
-                id:
-                  $ref: "#/components/schemas/ID"
-                song:
-                  $ref: '#/components/schemas/Song'
-                link:
-                  $ref: '#/components/schemas/Link'
-                group:
-                  $ref: '#/components/schemas/Group'
-                text:
-                  $ref: '#/components/schemas/Text'
-      responses:
-        '200':
-          description: Ok
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
     get:
       parameters:
         - name: group
