# internal/http/server_get.go
@@ -6,23 +6,14 @@ import (
 )
 
 func (s *server) Get(w http.ResponseWriter, r *http.Request) {
-	page, err := s.parsePage(r)
+	page, err := parsePage(r)
 	if err != nil {
 		s.error(w, r, http.StatusBadRequest, err)
 		return
 	}
 
-	var (
-		song  string
-		group string
-	)
-
-	if r.URL.Query().Has("song") {
-		song = r.URL.Query().Get("song")
-	}
-	if r.URL.Query().Has("group") {
-		group = r.URL.Query().Get("group")
-	}
+	song := r.URL.Query().Get(songParam)
+	group := r.URL.Query().Get(groupParam)
 
 	songs, err := s.useCases.Song.Get(r.Context(), dto.GetSongsParam{
 		Page:  &page,
